small change to prevent bottom cutoff on lower res screen

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
   .about2col {
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+    padding: 100px 0;
   }
   .aboutme {
     width: 25%;
